change index.html file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>Hello, HTML!</h1>
     <p>This is paragraph</p>
-    <button type="submit">GoodbyeDPI</button>
+    <button type="submit">Button</button>
+    <ul>
+      <li>Это маркированный список</li>
+      <li>Состоящий из</li>
+      <li>Трех элементов</li>
+    </ul>
   </body>
 </html>
