Exercise 1 - layout of the article

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Моя страница</title>
   </head>
   <body>
     <hr />
@@ -34,7 +34,19 @@
       кухню, а затем приносит вам готовое блюдо.
     </p>
     <p>В мире программирования API работает аналогичным образом:</p>
-    <ol>
+    <ul>
+      <li>
+        World
+        <ul>
+          <li>Hello</li>
+          <li></li>
+        </ul>
+      </li>
+      <li>Element 2</li>
+      <li>Element 3</li>
+      <li>Element 4</li>
+    </ul>
+    <ol start="2">
       <li>Ваше приложение (клиент) - это вы в ресторане.</li>
       <li>Сервер, предоставляющий данные или услуги, - это кухня ресторана.</li>
       <li>
