End first section HTML

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,13 +16,20 @@
     <h7>Header 7 doesn't exist</h7>
     <hr />
     <h1>API для начинающих: как работает программный интерфейс приложений</h1>
+    <img
+      src="images/banner.avif"
+      alt="Картинка поста API для начинающих: как работает программный интерфейс приложений"
+    />
+    <!-- Мой комментарий -->
     <p>
-      В современном мире разработки программного обеспечения трудно представить
-      создание приложений без использования API (Application Programming
-      Interface). Эта технология стала неотъемлемой частью процесса разработки,
-      позволяя программистам эффективно взаимодействовать с различными системами
-      и сервисами. В этой статье мы подробно разберем, что такое API, как они
-      работают и почему они так важны для начинающих разработчиков.
+      В современном мире разработки &minus; программного обеспечения трудно
+      представить создание приложений без использования
+      <a href="https://en.wikipedia.org/wiki/API" target="_blank">API</a>
+      (Application Programming Interface). Эта технология стала неотъемлемой
+      частью процесса разработки, позволяя программистам эффективно
+      взаимодействовать с различными системами и сервисами. В этой статье мы
+      подробно разберем, что такое API, как они работают и почему они так важны
+      для начинающих разработчиков.
     </p>
     <h2>Что такое API: простое объяснение для новичков</h2>
     <p>
@@ -52,6 +59,12 @@
       <li>
         API - это официант, который обеспечивает взаимодействие между вашим
         приложением и сервером.
+      </li>
+      <li>
+        <img
+          src="https://developer.mozilla.org/ru/docs/Web/HTML/Content_categories/content_categories_venn.png"
+          alt="Категории контента для HTML-тегов"
+        />
       </li>
     </ol>
     <h2>Что такое API: простое объяснение для новичков</h2>
