fix: restructure Miro project to separate folder

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,78 +1,83 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Моя страница</title>
-  </head>
-  <body>
-    <hr />
-    <h1>Header 1</h1>
-    <h2>Header 2</h2>
-    <h3>Header 3</h3>
-    <h4>Header 4</h4>
-    <h5>Header 5</h5>
-    <h6>Header 6</h6>
-    <h7>Header 7 doesn't exist</h7>
-    <hr />
-    <h1>API для начинающих: как работает программный интерфейс приложений</h1>
-    <img
-      src="images/banner.avif"
-      alt="Картинка поста API для начинающих: как работает программный интерфейс приложений"
-    />
-    <!-- Мой комментарий -->
-    <p>
-      В современном мире разработки &minus; программного обеспечения трудно
-      представить создание приложений без использования
-      <a href="https://en.wikipedia.org/wiki/API" target="_blank">API</a>
-      (Application Programming Interface). Эта технология стала неотъемлемой
-      частью процесса разработки, позволяя программистам эффективно
-      взаимодействовать с различными системами и сервисами. В этой статье мы
-      подробно разберем, что такое API, как они работают и почему они так важны
-      для начинающих разработчиков.
-    </p>
-    <h2>Что такое API: простое объяснение для новичков</h2>
-    <p>
-      API, или программный интерфейс приложения, - это набор правил и
-      протоколов, который позволяет различным программам общаться друг с другом.
-      Представьте себе API как официанта в ресторане. Когда вы приходите в
-      ресторан, вы не идете прямо на кухню и не готовите еду сами. Вместо этого
-      вы общаетесь с официантом, который принимает ваш заказ, передает его на
-      кухню, а затем приносит вам готовое блюдо.
-    </p>
-    <p>В мире программирования API работает аналогичным образом:</p>
-    <ul>
-      <li>
-        World
-        <ul>
-          <li>Hello</li>
-          <li></li>
-        </ul>
-      </li>
-      <li>Element 2</li>
-      <li>Element 3</li>
-      <li>Element 4</li>
-    </ul>
-    <ol start="2">
-      <li>Ваше приложение (клиент) - это вы в ресторане.</li>
-      <li>Сервер, предоставляющий данные или услуги, - это кухня ресторана.</li>
-      <li>
-        API - это официант, который обеспечивает взаимодействие между вашим
-        приложением и сервером.
-      </li>
-      <li>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Моя страница</title>
+    </head>
+    <body>
+        <hr />
+        <h1>Header 1</h1>
+        <h2>Header 2</h2>
+        <h3>Header 3</h3>
+        <h4>Header 4</h4>
+        <h5>Header 5</h5>
+        <h6>Header 6</h6>
+        <h7>Header 7 doesn't exist</h7>
+        <hr />
+        <h1>
+            API для начинающих: как работает программный интерфейс приложений
+        </h1>
         <img
-          src="https://developer.mozilla.org/ru/docs/Web/HTML/Content_categories/content_categories_venn.png"
-          alt="Категории контента для HTML-тегов"
+            src="images/banner.avif"
+            alt="Картинка поста API для начинающих: как работает программный интерфейс приложений"
         />
-      </li>
-    </ol>
-    <h2>Что такое API: простое объяснение для новичков</h2>
-    <p>
-      Когда ваше приложение нуждается в определенных данных или
-      функциональности, оно отправляет запрос к API. API, в свою очередь,
-      обрабатывает этот запрос, взаимодействует с сервером и возвращает
-      результат вашему приложению в понятном для него формате.
-    </p>
-  </body>
+        <!-- Мой комментарий -->
+        <p>
+            В современном мире разработки &minus; программного обеспечения
+            трудно представить создание приложений без использования
+            <a href="https://en.wikipedia.org/wiki/API" target="_blank">API</a>
+            (Application Programming Interface). Эта технология стала
+            неотъемлемой частью процесса разработки, позволяя программистам
+            эффективно взаимодействовать с различными системами и сервисами. В
+            этой статье мы подробно разберем, что такое API, как они работают и
+            почему они так важны для начинающих разработчиков.
+        </p>
+        <h2>Что такое API: простое объяснение для новичков</h2>
+        <p>
+            API, или программный интерфейс приложения, - это набор правил и
+            протоколов, который позволяет различным программам общаться друг с
+            другом. Представьте себе API как официанта в ресторане. Когда вы
+            приходите в ресторан, вы не идете прямо на кухню и не готовите еду
+            сами. Вместо этого вы общаетесь с официантом, который принимает ваш
+            заказ, передает его на кухню, а затем приносит вам готовое блюдо.
+        </p>
+        <p>В мире программирования API работает аналогичным образом:</p>
+        <ul>
+            <li>
+                World
+                <ul>
+                    <li>Hello</li>
+                    <li></li>
+                </ul>
+            </li>
+            <li>Element 2</li>
+            <li>Element 3</li>
+            <li>Element 4</li>
+        </ul>
+        <ol start="2">
+            <li>Ваше приложение (клиент) - это вы в ресторане.</li>
+            <li>
+                Сервер, предоставляющий данные или услуги, - это кухня
+                ресторана.
+            </li>
+            <li>
+                API - это официант, который обеспечивает взаимодействие между
+                вашим приложением и сервером.
+            </li>
+            <li>
+                <img
+                    src="https://developer.mozilla.org/ru/docs/Web/HTML/Content_categories/content_categories_venn.png"
+                    alt="Категории контента для HTML-тегов"
+                />
+            </li>
+        </ol>
+        <h2>Что такое API: простое объяснение для новичков</h2>
+        <p>
+            Когда ваше приложение нуждается в определенных данных или
+            функциональности, оно отправляет запрос к API. API, в свою очередь,
+            обрабатывает этот запрос, взаимодействует с сервером и возвращает
+            результат вашему приложению в понятном для него формате.
+        </p>
+    </body>
 </html>
