--- a/2 - PurpleForm/index.html
+++ b/2 - PurpleForm/index.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="styles/exercise.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <main>
