feat: add pseudo-classes and pseudo-elements, done practice work

--- a/1 - Miro/index.html
+++ b/1 - Miro/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
@@ -99,6 +99,18 @@
                             class="secondary__image"
                         />
                     </div>
+                </section>
+                <section class="types">
+                    <div class="main">
+                        <h2 class="main__heading types__heading heading">
+                            Создан для всех типов команд
+                        </h2>
+                    </div>
+                    <ul class="types__list">
+                        <li>Создавайте вайрфреймы</li>
+                        <li>Подключайте заказчиков к процессу дизайна</li>
+                        <li>Проводите вовлекающие дизайн-воркшопы</li>
+                    </ul>
                 </section>
             </main>
             <footer class="footer">
