--- a/Basics CSS/CSS Selectors/index.html
+++ b/Basics CSS/CSS Selectors/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
@@ -8,6 +8,17 @@
     </head>
     <body>
         <div id="my-div">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Nostrum, pariatur. Hello, World!
+                <br />
+                My name is Nikita, glad to see you there. Далеко-далеко за
+                словесными горами в стране гласных и согласных живут рыбные
+                тексты. Над, выйти вскоре речью прямо путь ему единственное он
+                своего подзаголовок. Парадигматическая повстречался, пустился
+                алфавит путь агентство рыбного образ свою.
+            </p>
+            <a href="index.html" target="_blank">Hello, World!</a>
             <p>
                 Далеко-далеко за словесными горами в стране гласных и согласных
                 живут рыбные тексты.
