feat: add classes for li-items in Miro project

--- a/1 - Miro/index.html
+++ b/1 - Miro/index.html
@@ -107,9 +107,9 @@
                         </h2>
                     </div>
                     <ul class="types__list">
-                        <li>Создавайте вайрфреймы</li>
-                        <li>Подключайте заказчиков к процессу дизайна</li>
-                        <li>Проводите вовлекающие дизайн-воркшопы</li>
+                        <li class="types__item">Создавайте вайрфреймы</li>
+                        <li class="types__item">Подключайте заказчиков к процессу дизайна</li>
+                        <li class="types__item">Проводите вовлекающие дизайн-воркшопы</li>
                     </ul>
                 </section>
             </main>
