feat: complete block model section, add margins for Miro project

--- a/1 - Miro/index.html
+++ b/1 - Miro/index.html
@@ -32,16 +32,16 @@
             </header>
             <main class="main">
                 <section class="hero">
-                    <div class="main">
-                        <h1 class="main__heading hero__heading heading">
+                    <div class="primary">
+                        <h1 class="primary__heading hero__heading heading">
                             Место для командной работы
                         </h1>
-                        <p class="main__desc hero__subheading">
+                        <p class="primary__desc hero__subheading">
                             Интерактивная онлайн-доска для совместной работы
                             команд - в любое время, в любом месте
                         </p>
                         <form action="/sign" method="post" class="sign">
-                            <input type="email" name="" id="sign__email" />
+                            <input type="email" title="Поле ввода почты" name="email" id="sign__email" />
                             <button type="submit" id="sign__submit">
                                 Начать бесплатно
                             </button>
@@ -59,11 +59,11 @@
                     </div>
                 </section>
                 <section class="together">
-                    <div class="main">
-                        <h2 class="main__heading together__heading heading">
+                    <div class="primary">
+                        <h2 class="primary__heading together__heading heading">
                             Работай вместе, где бы вы ни&nbsp;находились
                         </h2>
-                        <p class="main__desc together__desc">
+                        <p class="primary__desc together__desc">
                             Работая в офисе, удалённо или в гибридном формате, с
                             Miro ваша команда может общаться, сотрудничать и
                             совместно заниматься творчеством в одном
@@ -80,11 +80,11 @@
                     </div>
                 </section>
                 <section class="goal">
-                    <div class="main">
-                        <h2 class="main__heading goal__heading heading">
+                    <div class="primary">
+                        <h2 class="primary__heading goal__heading heading">
                             Закройте лишние вкладки — всё уже здесь
                         </h2>
-                        <p class="main__desc goal__desc">
+                        <p class="primary__desc goal__desc">
                             Редактируете ли вы документы в Google Docs,
                             работаете над задачами в Jira или созваниваетесь в
                             Zoom, Miro предлагает более 100 интеграций с уже
@@ -101,8 +101,8 @@
                     </div>
                 </section>
                 <section class="types">
-                    <div class="main">
-                        <h2 class="main__heading types__heading heading">
+                    <div class="primary">
+                        <h2 class="primary__heading types__heading heading">
                             Создан для всех типов команд
                         </h2>
                     </div>
